Added main grid with javascript

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <h1 id="title">Etch a Sketch</h1>
-    <div class="grid">
-
+    <div class="container">
     </div>
     <script src="./etchasketch.js"></script>
 </body>
