--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
-    <h1 id="title">Etch a Sketch</h1>
+    <div class="headerall">
+        <header>
+            <h1>ETCH A SKETCH</h1>
+            <button id="btn-grid" class="btn">Grid Size</button>
+            <button id="btn-clear" class="btn">Clear Grid</button>
+        </header>
+    </div>
     <div class="container">
+        <div class="grid-container"></div>
     </div>
     <script src="./etchasketch.js"></script>
 </body>
