Added some features and fixed bugs, project is finished

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="headerall">
         <header>
-            <h1>ETCH A SKETCH</h1>
+            <h1>Etch-a-Sketch</h1>
             <button id="btn-grid" class="btn">Grid Size</button>
             <button id="btn-clear" class="btn">Clear Grid</button>
         </header>
